Add endpoint for validating Promotional code
